2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Remove extraneous AC_MSG_RESULT.

2005-11-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Only build dlloader modules by default.

2005-11-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add check for DGA extension to fix issues when building with
	separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.