@@ -39,4 +39,9 @@ tga_drv_la_SOURCES = \
          tga_driver.c \
          tga.h \
          tga_line.c \
+         tga_seg.c \
          tga_regs.h
+
+tga_seg.c: tga_line.c
+	echo "#define POLYSEGMENT" > tga_seg.c
+	cat tga_line.c >> tga_seg.c
